# ESP32WeatherClock

./: .gitignore  readme.md
.devcontainer/: Dockerfile  devcontainer.json
ui_guiguider/: .gitignore  weather_clock.guiguider  常用字.txt
weather_clock/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
weather_clock/components/camera/: CMakeLists.txt  camera.c  camera.h
weather_clock/components/ksdiy_lvgl_port/: CMakeLists.txt  ksdiy_lvgl_port.c  ksdiy_lvgl_port.h
weather_clock/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
weather_clock/main/application/: application.cpp  application.h
weather_clock/main/get_weather/: get_weather.cpp  get_weather.h  数据.json
weather_clock/main/imu8658/: imu8658.cpp  imu8658.h
weather_clock/main/ntp_time/: ntp_time.cpp  ntp_time.h
weather_clock/main/ui_event/: ui_event.cpp  ui_event.h
weather_clock/main/ui_guiguider/: CMakeLists.txt
weather_clock/main/ui_guiguider/custom/: custom.c  custom.h
weather_clock/main/ui_guiguider/weather_icons/: images_list.mk  images_md5.json  mergeBinFile.c  w0.c  w10.c  w11.c  w12.c  w13.c  w14.c  w15.c  w16.c  w19.c  w20.c  w21.c  w22.c  w23.c  w24.c  w25.c  w26.c  w27.c  w28.c  w29.c  w30.c  w31.c  w32.c  w33.c  w34.c  w35.c  w36.c  w37.c  w38.c  w4.c  w5.c  w6.c  w7.c  w8.c  w9.c  w99.c
weather_clock/main/wifi/: wifi.cpp  wifi.h
